# DNA-Evolvment_Project-C-

./: BQ.cpp  BQ.h  CH.cpp  CH.h  CMakeLists.txt  Covid.cpp  Covid.h  CovidPtr.cpp  CovidPtr.h  Factory.cpp  Factory.h  README.md  Readme.txt  Simulation.cpp  Simulation.h  XBB.cpp  XBB.h  main.cpp
